# cloud-print-curd

./: .gitignore  LICENSE  LICENSES.md  README.en.md  README.md
docs/: README.md  (+1 more)
src/backend/: Dockerfile  README.md  alembic.ini  alembic.local.ini  docker-compose.yml  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 0001_initial.py
src/backend/scripts/: create_admin.py
src/backend/src/app/: audit.py  config.py  db.py  main.py  middleware.py  worker.py
src/backend/src/app/dependencies/: auth.py
src/backend/src/app/models/: __init__.py  user.py
src/backend/src/app/routes/: addresses.py  admin_audit.py  admin_auth.py  admin_files.py  admin_library.py  admin_metrics.py  admin_orders.py  admin_prices.py  admin_search.py  admin_users.py  auth_user.py  auth_wechat.py  files.py  health.py  home.py  library.py  metrics.py  orders.py  payments.py  prices.py  support.py
src/backend/src/app/services/: auth.py  pricing.py  storage.py  wechat.py
src/backend/tests/: conftest.py
src/backend/tests/contract/: openapi.yaml  test_openapi_contract.py
src/backend/tests/integration/: test_auth_negative_paths.py  test_file_rename_and_delete.py  test_health_and_auth.py  test_health_headers.py  test_order_webhook_flow.py  test_webhook_negative.py
src/backend/tests/perf/: locustfile.py  run_smoke.sh
src/backend/tests/unit/: test_auth_negative.py  test_auth_service.py  test_price_edge_cases.py  test_pricing.py  test_pricing_more_cases.py  test_wechat_mock.py  test_worker_page_count.py
src/backend/tools/: cleanup_files.py  replay_webhook.py
(+121 files in other folders)
