[project]
name = "cloud-print-backend"
version = "0.1.0"
description = "Cloud Print Service Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiomysql>=0.2.0",
    "pymysql>=1.0.3",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
    "boto3>=1.34.0",
    "dramatiq[redis]>=1.16.0",
    "pydantic-settings>=2.1.0",
    "pydantic>=2.5.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "pypdf>=4.0.0",
    "Pillow>=10.2.0",
    "sentry-sdk>=1.40.0",
    "prometheus-client>=0.19.0",
    "python-magic>=0.4.27",
    "bcrypt>=4.1.0",
    "email-validator>=2.1.0",
    "click>=8.1.0",
    "aiosqlite>=0.20.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "moto[s3]>=5.0.0",
    "httpx>=0.26.0",
    "schemathesis>=3.30.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pytest-mock>=3.14.0",
    "locust>=2.31.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
